--- a/app/public/wp-content/themes/northernsuburbsfencing/sass/_page.scss
+++ b/app/public/wp-content/themes/northernsuburbsfencing/sass/_page.scss
@@ -3,3 +3,61 @@ main.site-main {
     min-height: 70vh;
     background-color: #fff;
 }
+
+.home main {
+    padding-top: 0;
+}
+
+.home {
+
+    .home-columns {
+        margin: 10vh auto;
+
+        .wp-block-columns {
+            width: 80vw;
+            margin: 0 auto;
+
+            .wp-block-column {
+                text-align: center;
+
+                &:not(:first-child) {
+                    margin-left: 5vw;
+                }
+
+                i {
+                    font-size: 7em;
+                    background-color: cv(dark-orange);
+                    color: #fff;
+                    border-radius: 50%;
+                    padding: 5%;
+                }
+
+                p {
+                    //color: cv(neon-blue);
+                    text-align: justify;
+                    line-height: 1.5em;
+                    padding: 5%;
+                }
+            }
+        }
+    }
+
+    .home-hero {
+
+        .wp-block-cover__inner-container {
+            width: 60vw;
+            margin: 0 auto;
+
+            h2 {
+                text-align: center;
+                margin-bottom: 2em;
+            }
+
+            p {
+                text-align: center;
+                line-height: 1.5em;
+            }
+        }
+
+    }
+}
