--- a/app/public/wp-content/themes/northernsuburbsfencing/sass/_variables.scss
+++ b/app/public/wp-content/themes/northernsuburbsfencing/sass/_variables.scss
@@ -1,27 +1,34 @@
 /*
 @package: wwd blankslate
 */
+
+/* SCSS Gradient */
+$gradient-top: linear-gradient(0deg, #080708ff, #5260f2ff, #ea20f5ff, #ff8811ff, #b8d8d8ff);
+$gradient-right: linear-gradient(90deg, #080708ff, #5260f2ff, #ea20f5ff, #ff8811ff, #b8d8d8ff);
+$gradient-bottom: linear-gradient(180deg, #080708ff, #5260f2ff, #ea20f5ff, #ff8811ff, #b8d8d8ff);
+$gradient-left: linear-gradient(270deg, #080708ff, #5260f2ff, #ea20f5ff, #ff8811ff, #b8d8d8ff);
+$gradient-top-right: linear-gradient(45deg, #080708ff, #5260f2ff, #ea20f5ff, #ff8811ff, #b8d8d8ff);
+$gradient-bottom-right: linear-gradient(135deg, #080708ff, #5260f2ff, #ea20f5ff, #ff8811ff, #b8d8d8ff);
+$gradient-top-left: linear-gradient(225deg, #080708ff, #5260f2ff, #ea20f5ff, #ff8811ff, #b8d8d8ff);
+$gradient-bottom-left: linear-gradient(315deg, #080708ff, #5260f2ff, #ea20f5ff, #ff8811ff, #b8d8d8ff);
+$gradient-radial: radial-gradient(#080708ff, #5260f2ff, #ea20f5ff, #ff8811ff, #b8d8d8ff);
+
 $colors: (
-    pink: #ff80aa,
-    orange: #ffa26d,
-    yellow: #ffe548,
-    green: #10e18f,
-    purple: #db86ef,
-    mauve: #c0b9ff,
-    blue: #00A1AC,
-    cyan: #31c9d5,
-    deepgreen: #1C415E,
-    defaultlight: #eeeeee,
-    defaultdark: #333
+    black: #080708ff,
+    neon-blue: #5260f2ff,
+    fuchsia: #ea20f5ff,
+    dark-orange: #ff8811ff,
+    powder-blue: #b8d8d8ff,
 );
 
-$body-font: 'Roboto', sans-serif;
-$heading-font: 'Roboto', sans-serif;
-$base-font-size: 16px;
-$base-font-color: #4C79D2;
+$body-font: 'Montserrat', sans-serif;
+$heading-font: 'Varela Round', sans-serif;
+$heading-color: #5260f2ff;
+$base-font-size: 18px;
+$base-font-color: #080708ff;
 $header-height: 110px;
-$nav-font: $body-font;
+$nav-font: $heading-font;
 $hero-height: 60vh;
 $carousel-height: 60vh;
-$base-link-color: #4C79D2;
-$base-link-alt-color: #333;
+$base-link-color: #080708ff;
+$base-link-alt-color: #5260f2ff;
