--- a/app/public/wp-content/themes/northernsuburbsfencing/sass/_woocommerce.scss
+++ b/app/public/wp-content/themes/northernsuburbsfencing/sass/_woocommerce.scss
@@ -123,7 +123,7 @@ ul li.woocommerce-cart-icon {
         padding: 40px 8vw 20px 8vw;
 
         &:nth-child(even) {
-            background: cv(neon-blue, light);
+            // background: cv(neon-blue, light);
         }
 
         &:last-child() {
